# adaptive-PDF-extractor

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
Experiments/: runs.md
data/: test_cache.json
data/fake/: fake_dataset.json  fake_dataset_1000samples_seed_2.json  fake_dataset_2000samples_seed_1.json  fake_dataset_3000samples_seed_1.json
data/fake/cache/: cache_carteira_oab copy.json  cache_carteira_oab.json
data/fake/caches/: fake_dataset_1000samples_seed_2_cache.json  fake_dataset_1000samples_seed_3_cache.json  fake_dataset_2000samples_seed_1_cache.json  fake_dataset_3000samples_seed_1_cache.json
data/fake/datasets/: fake_dataset_1000samples_seed_3.json
data/fake/old/: debug1.json  debug1_cache.json  debug1_with_cache_result.json  debug2 copy.json  debug2_cache.json  debug2_with_cache_result.json  debug3.json  debug3_cache.json  debug3_with_cache_result.json  fake_dataset_1000samples_seed_1_cache.json
data/fake/processed/: processed_fake_dataset.json
data/fake/results/: fake_dataset_1000samples_seed_1_with_cache_result.json  (+5 more)
data/real/: dataset.json
docs/: cache.md  experiment.md  fake_data.md  pipeline.md  rule.md
notebooks/: cache.ipynb  cache1.json  cache1.pkl  fake_data.ipynb  main.ipynb  test_linked_list.json  test_linked_list.pkl
scripts/: fake.py  generate_fake_data.py
scripts/old/: fake.py
src/: cache.py  cache_new.py  data.py  llm.py  logger.py  main.ipynb  main.py  main_new.py  metrics.py  models.py  pipeline.py  rule.py  rule_new.py  utils.py
src/old/: config.py  main.py  rule.py  utils.py
