[project]
name = "enter-ai-fellowship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "json5>=0.12.1",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.2",
    "pypdf2>=3.0.1",
    "tyro>=0.9.35",
    "wandb>=0.22.3",
    "weave>=0.52.14",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
# target-version = "py310"
line-length = 88
# exclude = [
#   ".git",
#   "__pycache__",
#   "build",
#   "dist",
#   ".venv",
#   "env",
#   ".mypy_cache",
#   ".ruff_cache",
# ]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "W"]
ignore = ["D415", "D205"]
unfixable = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
